--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -113,7 +113,7 @@
 
     @include respond(phone){
       display: flex;
-      justify-content: end;
+      //justify-content: end;
       transform: skewX(0);
       margin-left: 0;
     }
